--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "protobufjs": "^3.8.2",                   
     "socket.io-client": "1.4.8",
     "socket.io": "1.4.8",
-    "eventemitter3": "^1.2.0"        
+    "eventemitter3": "^1.2.0",
+    "yargs": "^6.5.0",
+    "my-local-ip": "^1.0.0"  
   }
 }
