--- a/package.json
+++ b/package.json
@@ -15,18 +15,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "webpack": "^1.12.11",
-    "ws": "^1.0.1",  
-    "zmq": "^2.14.0",                 
-    "bluebird": "^2.10.1",          
-    "chalk": "~1.1.1",              
-    "commander": "^2.9.0",          
-    "lodash": "^4.14.2",            
-    "protobufjs": "^3.8.2",                   
-    "socket.io-client": "1.4.8",
-    "socket.io": "1.4.8",
+    "http-proxy": "^1.11.2",
+    "bluebird": "^2.10.1",
+    "chalk": "~1.1.1",
+    "commander": "^2.9.0",
     "eventemitter3": "^1.2.0",
+    "express": "^4.15.0",
+    "lodash": "^4.14.2",
+    "morgan": "^1.8.1",
+    "my-local-ip": "^1.0.0",
+    "protobufjs": "^3.8.2",
+    "rethinkdb": "^2.0.2",
+    "socket.io": "1.4.8",
+    "socket.io-client": "1.4.8",
+    "webpack": "^1.12.11",
+    "ws": "^1.0.1",
     "yargs": "^6.5.0",
-    "my-local-ip": "^1.0.0"  
+    "zmq": "^2.14.0"
   }
 }
